--- a/SPHSampleTest/SPHSampleTest/TableViewCell/MobileDataTableViewCell.xib
+++ b/SPHSampleTest/SPHSampleTest/TableViewCell/MobileDataTableViewCell.xib
@@ -9,85 +9,110 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="67" id="KGk-i7-Jjw" customClass="MobileDataTableViewCell" customModule="SPHSampleTest" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="67"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MobileDataTableViewCell" customModule="SPHSampleTest" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="414" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="414" height="67"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="414" height="90"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sm8-s4-Nds">
-                        <rect key="frame" x="358" y="13.5" width="40" height="40"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="40" id="Xbv-u5-CVt"/>
-                            <constraint firstAttribute="width" constant="40" id="aTb-s9-7PA"/>
-                        </constraints>
-                        <state key="normal" image="IconChart"/>
-                    </button>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="6ci-RM-o47">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="30"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JYb-aZ-aLz">
+                        <rect key="frame" x="10" y="10" width="394" height="70.5"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gGa-yd-HYj">
-                                <rect key="frame" x="0.0" y="0.0" width="80" height="30"/>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sm8-s4-Nds">
+                                <rect key="frame" x="344" y="20.5" width="40" height="40"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="cSs-zM-gMe"/>
+                                    <constraint firstAttribute="height" constant="40" id="Xbv-u5-CVt"/>
+                                    <constraint firstAttribute="width" constant="40" id="aTb-s9-7PA"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qrb-yb-0LM">
-                                <rect key="frame" x="100" y="0.0" width="314" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="30" id="Zgl-JH-fDX"/>
-                            <constraint firstItem="gGa-yd-HYj" firstAttribute="leading" secondItem="6ci-RM-o47" secondAttribute="leading" id="iay-jN-rUX"/>
-                            <constraint firstItem="gGa-yd-HYj" firstAttribute="top" secondItem="6ci-RM-o47" secondAttribute="top" id="tWK-xF-VxW"/>
-                            <constraint firstAttribute="bottom" secondItem="gGa-yd-HYj" secondAttribute="bottom" id="x9m-6J-8Oc"/>
-                        </constraints>
-                    </stackView>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="BS4-oP-LwU">
-                        <rect key="frame" x="0.0" y="35" width="414" height="30"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xXi-Hj-KFu">
-                                <rect key="frame" x="0.0" y="0.0" width="80" height="30"/>
+                                <state key="normal" image="IconChart"/>
+                                <connections>
+                                    <action selector="clickOnButtonEvent:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="pXP-xB-dH9"/>
+                                </connections>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="6ci-RM-o47">
+                                <rect key="frame" x="10" y="0.0" width="374" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gGa-yd-HYj">
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="cSs-zM-gMe"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qrb-yb-0LM">
+                                        <rect key="frame" x="100" y="0.0" width="274" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="y2x-dw-CFh"/>
+                                    <constraint firstAttribute="height" constant="30" id="Zgl-JH-fDX"/>
+                                    <constraint firstItem="gGa-yd-HYj" firstAttribute="leading" secondItem="6ci-RM-o47" secondAttribute="leading" id="iay-jN-rUX"/>
+                                    <constraint firstItem="gGa-yd-HYj" firstAttribute="top" secondItem="6ci-RM-o47" secondAttribute="top" id="tWK-xF-VxW"/>
+                                    <constraint firstAttribute="bottom" secondItem="gGa-yd-HYj" secondAttribute="bottom" id="x9m-6J-8Oc"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="la4-jR-hBV">
-                                <rect key="frame" x="100" y="0.0" width="314" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="BS4-oP-LwU">
+                                <rect key="frame" x="10" y="40" width="374" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xXi-Hj-KFu">
+                                        <rect key="frame" x="0.0" y="0.0" width="80" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="80" id="y2x-dw-CFh"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="la4-jR-hBV">
+                                        <rect key="frame" x="100" y="0.0" width="274" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="cf8-uf-XYF"/>
+                                    <constraint firstItem="xXi-Hj-KFu" firstAttribute="top" secondItem="BS4-oP-LwU" secondAttribute="top" id="mQn-Lr-i39"/>
+                                    <constraint firstItem="xXi-Hj-KFu" firstAttribute="leading" secondItem="BS4-oP-LwU" secondAttribute="leading" id="s4b-iH-bXj"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="30" id="R8a-2Y-FEp"/>
-                            <constraint firstItem="xXi-Hj-KFu" firstAttribute="top" secondItem="BS4-oP-LwU" secondAttribute="top" id="mQn-Lr-i39"/>
-                            <constraint firstItem="xXi-Hj-KFu" firstAttribute="leading" secondItem="BS4-oP-LwU" secondAttribute="leading" id="s4b-iH-bXj"/>
+                            <constraint firstAttribute="trailing" secondItem="BS4-oP-LwU" secondAttribute="trailing" constant="10" id="Btt-8A-7Sx"/>
+                            <constraint firstAttribute="height" constant="70.5" id="Bw3-sq-RjI"/>
+                            <constraint firstItem="BS4-oP-LwU" firstAttribute="top" secondItem="6ci-RM-o47" secondAttribute="bottom" constant="10" id="JCY-SM-eSl"/>
+                            <constraint firstItem="6ci-RM-o47" firstAttribute="leading" secondItem="JYb-aZ-aLz" secondAttribute="leading" constant="10" id="KnQ-CQ-Juo"/>
+                            <constraint firstItem="6ci-RM-o47" firstAttribute="top" secondItem="JYb-aZ-aLz" secondAttribute="top" id="PRW-6n-ouO"/>
+                            <constraint firstItem="BS4-oP-LwU" firstAttribute="leading" secondItem="JYb-aZ-aLz" secondAttribute="leading" constant="10" id="XpN-ty-zku"/>
+                            <constraint firstAttribute="trailing" secondItem="6ci-RM-o47" secondAttribute="trailing" constant="10" id="Y2e-bt-GJd"/>
+                            <constraint firstAttribute="bottom" secondItem="Sm8-s4-Nds" secondAttribute="bottom" constant="10" id="hCW-mX-ShD"/>
+                            <constraint firstItem="Sm8-s4-Nds" firstAttribute="centerY" secondItem="JYb-aZ-aLz" secondAttribute="centerY" constant="5.25" id="kw8-nD-Yns"/>
+                            <constraint firstAttribute="trailing" secondItem="Sm8-s4-Nds" secondAttribute="trailing" constant="10" id="rok-Wi-Xsf"/>
                         </constraints>
-                    </stackView>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="6ci-RM-o47" secondAttribute="trailing" id="0Jg-e2-PPE"/>
-                    <constraint firstItem="6ci-RM-o47" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="BKf-3c-fh3"/>
-                    <constraint firstAttribute="trailing" secondItem="BS4-oP-LwU" secondAttribute="trailing" id="BTc-Q1-GRW"/>
-                    <constraint firstItem="Sm8-s4-Nds" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Bw7-fi-d8r"/>
-                    <constraint firstAttribute="trailing" secondItem="Sm8-s4-Nds" secondAttribute="trailing" constant="16" id="ecB-Jn-UrJ"/>
-                    <constraint firstItem="BS4-oP-LwU" firstAttribute="top" secondItem="6ci-RM-o47" secondAttribute="bottom" constant="5" id="h4T-Sp-dG7"/>
-                    <constraint firstItem="BS4-oP-LwU" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="uyE-R8-hXY"/>
-                    <constraint firstItem="6ci-RM-o47" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="zz9-6A-tqg"/>
+                    <constraint firstAttribute="trailing" secondItem="JYb-aZ-aLz" secondAttribute="trailing" constant="10" id="79L-Bf-jDb"/>
+                    <constraint firstAttribute="bottom" secondItem="JYb-aZ-aLz" secondAttribute="bottom" constant="10" id="Xnm-01-b79"/>
+                    <constraint firstItem="JYb-aZ-aLz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="atP-HO-9bs"/>
+                    <constraint firstItem="JYb-aZ-aLz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="kMc-bB-gk0"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="increaseDecreaseVolume" destination="Sm8-s4-Nds" id="IWk-vA-TdI"/>
+                <outlet property="lblVolume" destination="xXi-Hj-KFu" id="721-Re-hxk"/>
+                <outlet property="lblVolumeDescription" destination="la4-jR-hBV" id="eiF-KZ-n12"/>
+                <outlet property="lblYear" destination="gGa-yd-HYj" id="GWs-ls-ZwC"/>
+                <outlet property="lblYearDescription" destination="qrb-yb-0LM" id="6o0-Ve-cvQ"/>
+                <outlet property="viewBg" destination="JYb-aZ-aLz" id="iSx-4R-Fzj"/>
+            </connections>
             <point key="canvasLocation" x="-191.30434782608697" y="123.54910714285714"/>
         </tableViewCell>
     </objects>
